[package]
name = "user-metrics-monitoring-system"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.22"
dotenv = "0.15"
env_logger = "0.11.5"
uuid = { version = "1.9.0", features = ["serde", "v4"] }
